k8s/overlays/dev/patches/resources.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-service
  namespace: messager-team
spec:
  template:
    spec:
      containers:
        - name: user-service
          $patch: replace
          resources:
            requests:
              cpu: "50m"
              memory: "128Mi"
            limits:
              cpu: "200m"
              memory: "256Mi"
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: message-service
  namespace: messager-team
spec:
  template:
    spec:
      containers:
        - name: message-service
          $patch: replace
          resources:
            requests:
              cpu: "50m"
              memory: "128Mi"
            limits:
              cpu: "200m"
              memory: "256Mi"
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bff
  namespace: messager-team
spec:
  template:
    spec:
      containers:
        - name: bff
          $patch: replace
          resources:
            requests:
              cpu: "50m"
              memory: "128Mi"
            limits:
              cpu: "200m"
              memory: "256Mi"
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: messager-team
spec:
  template:
    spec:
      containers:
        - name: frontend
          $patch: replace
          resources:
            requests:
              cpu: "50m"
              memory: "128Mi"
            limits:
              cpu: "200m"
              memory: "256Mi"
