k8s/overlays/dev/patches/ingress-host.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  namespace: messager-team
spec:
  rules:
    - host: dev.localhost
